<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activity.RegisterActivity">
    <RelativeLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/fab_margin"
            android:background="@drawable/back" />

        <RelativeLayout
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@+id/axs_text"
                android:text="@string/register"
                android:textColor="@color/colorText"
                android:textSize="28sp" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_bar"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/firstname_edit"
            style="@style/AppTheme.EditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:hint="@string/first_name"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp" />

        <EditText
            android:id="@+id/lastname_edit"
            style="@style/AppTheme.EditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:hint="@string/last_name"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp" />

        <EditText
            android:id="@+id/email_edit"
            style="@style/AppTheme.EditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp" />

        <EditText
            android:id="@+id/password_edit"
            style="@style/AppTheme.EditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="20dp" />

        <EditText
            android:id="@+id/confirm_password_edit"
            style="@style/AppTheme.EditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingLeft="20dp" />

        <Button
            android:id="@+id/register_button"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textSize="20sp" />
    </LinearLayout>
</RelativeLayout>