<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activity.MainActivity">

    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/privy_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Axs"
                android:textColor="@color/colorPrimary"
                android:textSize="28sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="VPN"
                android:textColor="@color/colorText"
                android:textSize="28sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/open_log_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_log" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_bar"
                android:layout_centerHorizontal="true"
                android:text="@string/open_log"
                android:gravity="center"
                android:textColor="@color/colorText"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/logout_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/ic_quit" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_bar"
                android:layout_centerHorizontal="true"
                android:text="@string/log_out"
                android:textColor="@color/colorText"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/descrption1_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/press"
        android:textColor="@color/colorText"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/connect_button"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@+id/descrption1_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/disabled" />

    <TextView
        android:id="@+id/status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connect_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/disabled"
        android:textColor="@color/colorDisconnected"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/descrption2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/status_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/get_secured"
        android:textColor="@color/colorText"
        android:textSize="20sp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/connected_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/status_text"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ip_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_ip"
                android:textColor="@color/colorText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ip_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="185.232.20.195"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />
        </RelativeLayout>

        <!--<RelativeLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="10dp">-->

            <!--<TextView-->
                <!--android:id="@+id/sites_title"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="Sites unblocked"-->
                <!--android:textColor="@color/colorText"-->
                <!--android:textSize="20sp" />-->

            <!--<TextView-->
                <!--android:id="@+id/sites_text"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentRight="true"-->
                <!--android:text="0"-->
                <!--android:textColor="@color/colorPrimary"-->
                <!--android:textSize="20sp" />-->
        <!--</RelativeLayout>-->
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/product_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/server_layout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/product_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1.5 GB Left"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/menu_text_size" />

        <TextView
            android:id="@+id/upgrade_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/right_arrow_image"
            android:text="@string/go_unlimited"
            android:textColor="@color/colorText"
            android:textSize="@dimen/menu_text_size" />

        <ImageView
            android:id="@+id/right_arrow_image"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/drop" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/server_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/separator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/separator" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/server_location"
                android:textColor="@color/colorText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/server_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/best_location"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/drop" />

    </RelativeLayout>
</RelativeLayout>