<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".activity.PremiumActivity">

    <RelativeLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/fab_margin"
            android:background="@drawable/back"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <RelativeLayout
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/axs_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="Axs"
                android:textColor="@color/colorPrimary"
                android:textSize="28sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_toEndOf="@+id/axs_text"
                android:text="VPN"
                android:textColor="@color/colorText"
                android:textSize="28sp" />
        </RelativeLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/backgroud_premium"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/axs_text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/month_1"
                    android:textColor="@color/colorText"
                    android:textSize="28sp" />

                <TextView
                    android:id="@+id/axs_text3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/month"
                    android:textColor="@color/colorPrimary"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/axs_text4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/premium_txt"
                    android:textColor="@color/colorText"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/premium_1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="15dp"
                    android:text="@string/order" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/backgroud_premium"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/axs_text22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/month_1_2"
                    android:textColor="@color/colorText"
                    android:textSize="28sp" />

                <TextView
                    android:id="@+id/axs_text32"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/month_6"
                    android:textColor="@color/colorPrimary"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/axs_text42"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/premium_txt"
                    android:textColor="@color/colorText"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/premium_2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="15dp"
                    android:text="@string/order" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/backgroud_premium"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/axs_text23"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/month_1_3"
                    android:textColor="@color/colorText"
                    android:textSize="28sp" />

                <TextView
                    android:id="@+id/axs_text33"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="@string/year"
                    android:textColor="@color/colorPrimary"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/axs_text43"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/premium_txt"
                    android:textColor="@color/colorText"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/premium_3"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="15dp"
                    android:text="@string/order" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>